--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,4 +4,16 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Public Sans",sans-serif;
+}
+
+:root{
+    --titleColor:hsl(233, 26%, 24%);
+    --backgroundButton:hsl(136, 65%, 51%);
+    --navbarColor:hsl(220, 16%, 96%);
+    --white:hsl(0, 0%, 100%);
+    --fontColor:hsl(233, 8%, 62%);
+    --hoover:hsl(136, 65%, 51%);
+    
+    /* --degrade:hsl(192, 70%, 51%);*/
 }
