--- a/assets/style/mobile.css
+++ b/assets/style/mobile.css
@@ -26,6 +26,10 @@
         text-align: center;
     }
 
+    .content h1{
+        font-size: 20px;
+     }
+
     .img{
         width: 100%;
         background-image: url(../images/bg-intro-mobile.svg);
@@ -52,6 +56,10 @@
         margin: auto;
         padding: 15px;
         text-align: center;
+    }
+
+    .titleBank{
+        font-size: 20px;
     }
 
     .easybank{
